--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>Contact Name</title>
+    <title>Contacts</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href=".\css\style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,29 +18,19 @@
 <body>
 
     <header>
-        <nav>
+        <nav>   
             <h1><a href="index.html" class="nav-home" id="contactshome">Contacts</a></h1>
             <h2><a href="page2.html" class="nav" id="newcontact">Create New Contact +</a></h2>
             <!-- <h2><a href="page3.html" class="nav" id="favouritecontacts">Show Favourites</a></h2> -->
         </nav>
     </header>
 
-    <div class="main">
-        <div class="contactinfo">
-            <div class="contactname">
-                Raquel Ervin
-                <img src="./img/profile.jpg" class="profilepic" alt="Profile picture">
-            </div>
-            <div class="contactemail">email: rocket@gmail.com</div>
-            <div class="contactphone">cell: +1 555 555-5555</div>
-            <div class="contactaddress">address: 123 front st, Unit #1, Dakota City</div>
-            <div class="buttons">
-                <button class="button edit" value="Edit">Edit</button>
-                <button class="button close" value="Close">Close</button>
-            </div>
-        </div>
+    <div class="main">  
+        <a href="page3.html"><div class="contact"><p>Barry Allen</p></div></a> 
+        <a href="page3.html"><div class="contact"><p>Beverly Crusher</p></div></a>
+        <a href="page3.html"><div class="contact"><p>Diana Prince</p></div></a>
     </div>
-    
+
     <script type="text/javascript" src="script.js"></script>
 </body>
 
