--- a/page2.html
+++ b/page2.html
@@ -1,48 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="CSS/style.css" rel="stylesheet">
+    <title>Create a New Contact</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href=".\css\style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Quicksand&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
+
 </head>
-<body> 
-    <nav>
-        <h1>
-            Contacts
-        </h1>
-        <div class="navbutton">Create New Contact +</div>
-        <div class="navbutton">Show Favorites</div>
-    </nav>
-    <div class="bodyclass">
-        <div style="display: flex;flex-direction: column;padding: 5vw;min-width: 15vw;max-width: 18rem;gap: 2vh;">
-            <img src="images/account.png" style="width: 8rem;height: 8rem;margin-left: 10px;"  alt="Profile Picture">
-            <div style="display: flex;flex-direction: row;justify-content: center;align-content: center;">
-                <textarea cols="20" rows="1" style="border: 2px solid;border-radius:4%;resize:none;padding: .5rem; ">Contact Name</textarea>
-                <strong style="color: #faf4ed;font-size: xx-large;">+</strong>
+
+
+<body>
+
+    <header>
+        <nav>   
+            <h1><a href="index.html" class="nav-home" id="contactshome">Contacts</a></h1>
+            <h2><a href="page2.html" class="nav" id="newcontact">Create New Contact +</a></h2>
+            <!-- <h2><a href="page3.html" class="nav" id="favouritecontacts">Show Favourites</a></h2> -->
+        </nav>
+    </header>
+
+    <div class="main">
+        <div class="contactedit">
+            <div class="contactimg">
+                <img src="./img/profile.jpg" class ="profilepic" alt="Profile picture">
             </div>
-            <div style="display: flex;flex-direction: row;justify-content: center;align-content: center;">
-                <textarea cols="20" rows="1" style="border: 2px solid;border-radius:4%;resize:none;padding: .5rem;">Contact Phone</textarea><strong style="font-size: xx-large;">+</strong>
-            </div>
-            <div style="display: flex;flex-direction: row;justify-content: center;align-content: center;">
-                <textarea cols="20" rows="1" style="border: 2px solid;border-radius:4%;resize:none;padding: .5rem;">Contact Address</textarea><strong style="font-size: xx-large;">+</strong>
-            </div>
-            <div style="display: flex;flex-direction: row;justify-content: center;align-content: center;">
-                <textarea cols="20" rows="1" style="border: 2px solid;border-radius:4%;resize:none;padding: .5rem;">Contact Email</textarea><strong style="font-size: xx-large;">+</strong>
-            </div>
-            <div style="display: flex;flex-direction: row;justify-content: space-evenly;color: #faf4ed;">
-                <div class="savecontactbutton">
-                    Save Contact                    
-                </div>
-                <div class="closebutton">
-                    Close
-                </div>
+            <div class="form">
+                <form>
+                    <div class="inputcontainer">
+                        <input type="text" id="contactname" name="contactname" placeholder="Contact Name">
+                        <button class="extrafield" id="extranamefield" name="extranamefield">+</button>
+                    </div>
+
+                    <div class="inputcontainer">
+                        <input type="tel" id="contactphone" name="contactphone" placeholder="Contact Phone">
+                        <button class="extrafield" id="extraphonefield" name="extraphonefield">+</button>
+                    </div>
+
+                    <div class="inputcontainer">
+                        <input type="text" id="contactaddress" name="contactaddress" placeholder="Contact Address">
+                        <button class="extrafield" id="extraaddressfield" name="extraaddressfield">+</button>
+                    </div>
+                    
+                    <div class="inputcontainer">
+                        <input type="email" id="contactemail" name="contactemail" placeholder="Contact Email">
+                        <button class="extrafield" id="extraemailfield" name="extraemailfield">+</button>
+                    </div>
+
+                    <div class="buttons">
+                        <button type="submit" class="button save" id="savecontact" name="savecontact">Save Contact</button>
+                        <button type="reset" class="button cancel" id="cancel" name="cancel">Cancel</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
+
+    <script type="text/javascript" src="script.js"></script>
 </body>
+
 </html>
