--- a/index.html
+++ b/index.html
@@ -19,16 +19,13 @@
 
     <header>
         <nav>   
-            <h1><a href="index.html" class="nav-home" id="contactshome">Contacts</a></h1>
-            <h2><a href="page2.html" class="nav" id="newcontact">Create New Contact +</a></h2>
+            <h1><a href="www.mozilla.com" class="nav-home" id="contactshome">Contacts</a></h1>
+            <h2><a href="www.mozilla.com" class="nav" id="newcontact">Create New Contact +</a></h2>
             <!-- <h2><a href="page3.html" class="nav" id="favouritecontacts">Show Favourites</a></h2> -->
         </nav>
     </header>
 
-    <div class="main">  
-        <a href="page3.html"><div class="contact"><p>Barry Allen</p></div></a> 
-        <a href="page3.html"><div class="contact"><p>Beverly Crusher</p></div></a>
-        <a href="page3.html"><div class="contact"><p>Diana Prince</p></div></a>
+    <div class="main">
     </div>
 
     <script type="text/javascript" src="script.js"></script>
